# socket-cluster-cpp

./: CMakeLists.txt  LICENSE  README.md
examples/: example_client.cpp  example_client_classed.cpp  example_client_simple.cpp
include/: scclient.h  threadSafeList.h  threadSafeQueue.h
src/: scclient.cpp
